apps/workloads/media/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr
          ports:
            - name: web-ui
              containerPort: 5055
              protocol: TCP
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: web-ui
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: cache
              mountPath: /app/config/cache
          resources:
            requests:
              cpu: "25m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1536Mi"
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: seerr-config-longhorn-pvc
        - name: cache
          emptyDir:
            sizeLimit: 4Gi
