apps/workloads/media/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr-ui
spec:
  selector:
    app: seerr
  ports:
    - name: web-ui
      port: 5055
