apps/workloads/media/seerr/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: seerr-policy
spec:
  endpointSelector:
    matchLabels:
      app: seerr
  # ----=== Ingress ===----
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: home-assistant
            k8s:io.kubernetes.pod.namespace: iot
      toPorts:
        - ports:
            - port: "web-ui"
              protocol: "TCP"
  # ----=== Egress ===----
  egress:
    # === Allow access to services ===
    - toServices:
        - k8sService:
            serviceName: plex-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-tv-ui
            namespace: media
        - k8sService:
            serviceName: sonarr-anime-ui
            namespace: media
        - k8sService:
            serviceName: radarr-ui
            namespace: media
        - k8sService:
            serviceName: tautulli-ui
            namespace: media
        - k8sService:
            serviceName: media-webhook-notifier
            namespace: automation
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: automation
            app.kubernetes.io/name: media-webhook-notifier
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: automation
            app.kubernetes.io/name: ntfy
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # === Allow access to Postgres on Fortress ===
    - toCIDR:
        - "10.10.1.218/32"
      toPorts:
        - ports:
            - port: "15432"
              protocol: TCP
    # === Allow access to external for metadata ===
    - toEntities:
        - "world"
      toPorts:
        # Only allow HTTP/S for indexers
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "80"
              protocol: TCP
            - port: "587" #SMTP
              protocol: TCP
